# Linux-IPC

./: CMakeLists.txt  LICENSE  README.md  utils.c  utils.h
posix_message_queues/: README.md  mq_client.c  mq_server.c
posix_shared_memory/: README.md  shared_memory.h  shm_reader.c  shm_writer.c
routing_table_manager/: README.md
routing_table_manager/include/: linked_list.h  node.h
routing_table_manager/src/: input.c  input.h  rtm.c  rtm.h  rtm_client.c  rtm_server.c
routing_table_manager/tests/: test_input.c
unix_domain_sockets/: README.md  client.c  server.c
unix_domain_sockets/multiplexing/: fd_set_mgmt.c  fd_set_mgmt.h  server.c
unix_domain_sockets/no_multiplexing/: server.c
